# moonlight-sideband

./: .gitignore  CMakeLists.txt  README.md  main.cpp  moonlight_sideband.manifest
.github/workflows/: build.yml
include/: ISidebandModule.hpp  Logger.hpp  SidebandProtocol.hpp  SidebandServer.hpp  SidebandSession.hpp
modules/: CursorModule.cpp  CursorModule.hpp  DisplayModule.cpp  DisplayModule.hpp
src/: SidebandServer.cpp  SidebandSession.cpp
